prevent sentiment buttons from wrapping

--- a/public/style.css
+++ b/public/style.css
@@ -94,8 +94,8 @@ body, html {
 }
 
 .btn {
-  padding-left: 4%;
-  padding-right: 4%;
+  padding-left: 3.5%;
+  padding-right: 3.5%;
 }
 
 /***********************/
